--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb+srv://sjuacoc2t:<EIhJ3jkCYyUfjphm>@sebijuan.osehj.mongodb.net/
+MONGO_URI=mongodb+srv://sjuacoc2t:EIhJ3jkCYyUfjphm@sebijuan.osehj.mongodb.net/
+PORT=5000
