--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://sjuacoc2t:EIhJ3jkCYyUfjphm@sebijuan.osehj.mongodb.net/
+MONGO_URI=mongodb+srv://sjuacoc2t:EIhJ3jkCYyUfjphm@sebijuan.osehj.mongodb.net/mydatabase?retryWrites=true&w=majority
 PORT=5000
